--- a/depoimentos.html
+++ b/depoimentos.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="Vinielle Souza" />
 		<meta name="keywords" content="personal trainer, atividade física, musculação, academia" />
 		<meta name="description" content=" Personal Trainer em Brasília e online" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="estilo.css" />
 	</head>
 
@@ -27,7 +28,7 @@
 					<li class="li-menu"> <a class="a-menu" href="index.html"> INÍCIO </a> </li>
 					<li class="li-menu"> <a class="a-menu" href="planos.html" target="blank"> PLANOS </a> </li>
 					<li class="li-menu"> <a class="a-menu" href="depoimentos.html" target="blank"> DEPOIMENTOS </a> </li>
-					<!-- <li class="li-menu" id="nav-po"> <a class="a-menu" href="planos.html" target="blank"> PERSONAL ONLINE </a> </li> -->
+					<!-- <li class="li-menu" id="nav-po"> <a class="a-menu" href="planos.html#pag-pers-on" target="blank"> PERSONAL ONLINE </a> </li> -->
 					<li class="li-menu"> <a class="a-menu" href="agendamento.html" target="blank"> AGENDAMENTOS </a> </li>
 				</ul> 	
 			</nav>
